discussion/kv_engine/135598/135598_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-41294 magma-kvstore: Add config for setting expiry purger interval

Added `magma_expiry_purger_interval` config to set the magma expiry
compaction trigger intervals. This determines how soon an expiry
callback is performed or an expired tombstone can be removed after
a document expires.

The magma internally maintains histograms of expiry time per sstable.
It uses expiry histograms to trigger expired items based
auto-compaction at intervals configured by this parameter.

Removed obsolete config `magma_tombstone_frag_threshold`.

Change-Id: I5d2cdf17e3967af2417e6d8ce971b38a8685327d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Sarath Lakshman
Date: 2020-09-15 08:57:10.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-09-15 08:57:22.000000000
Message: 
Patch Set 7:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-09-15 08:57:47.000000000
Message: 
Patch Set 7: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-09-15 09:40:33.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4517/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_config.cc:63:31: error: no viable overloaded "=" [clang-diagnostic-error]
    magmaExpiryPurgerInterval =
                              ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/chrono:336:12: note: candidate function not viable: no known conversion from "duration<[...], ratio<1, [...]>>" to "const duration<[...], ratio<60, [...]>>" for 1st argument
        duration& operator=(const duration&) = default;
                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4517/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_config.cc:63:31:
error: no viable overloaded "=" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4517/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26316/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_config.cc:63:31:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26316/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30422/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore_config.cc(63): error C2679: binary "=": no operator found which takes a right-hand operand of type "std::chrono::seconds" (or there is no acceptable conversion) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30422/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5865/ : FAILURE

Compile error at [2020-09-15T09:33:46.323Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_config.cc:64:71:
error: no match for ?operator=? (operand types are ?std::chrono::minutes {aka std::chrono::duration<long int, std::ratio<60> >}? and ?std::chrono::duration<long int>?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5865/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6000/ : FAILURE

Compile error at [2020-09-15T09:35:58.127Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_config.cc:63:31:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6000/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13677/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4868/ : FAILURE

Compile error at [2020-09-15T09:01:17.796Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_config.cc:63:31:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4868/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3043/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5764/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
